[gd_scene load_steps=11 format=3 uid="uid://clwkngxgw3ryf"]

[ext_resource type="Script" uid="uid://dri0rh0kx53d0" path="res://prefabs/tornado.gd" id="1_yit2p"]
[ext_resource type="Shader" uid="uid://rtinpy4jblrh" path="res://shaders/fireball.gdshader" id="2_pffwp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ad3cw"]
transparency = 1
albedo_color = Color(0, 0, 0, 0.666667)

[sub_resource type="SphereMesh" id="SphereMesh_okwvi"]
material = SubResource("StandardMaterial3D_ad3cw")
radius = 0.1
height = 0.2

[sub_resource type="SphereShape3D" id="SphereShape3D_ch331"]
radius = 0.1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_pffwp"]
height = 5.0

[sub_resource type="FastNoiseLite" id="FastNoiseLite_erea1"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_n6idy"]
seamless = true
noise = SubResource("FastNoiseLite_erea1")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ok6uc"]
render_priority = 1
shader = ExtResource("2_pffwp")
shader_parameter/noise_texture = SubResource("NoiseTexture2D_n6idy")
shader_parameter/base_color = Color(0.354777, 0.364982, 0.369342, 1)
shader_parameter/edge_color = Color(0, 0, 0, 1)
shader_parameter/fire_alpha = 1.0
shader_parameter/fire_filter = 0.278
shader_parameter/fire_power = 20.0
shader_parameter/fire_speed = Vector2(2, 0)

[sub_resource type="CylinderMesh" id="CylinderMesh_isfe7"]
lightmap_size_hint = Vector2i(159, 104)
material = SubResource("ShaderMaterial_ok6uc")
top_radius = 5.0
bottom_radius = 5.0
height = 10.0
cap_top = false
cap_bottom = false

[node name="tornado" type="CharacterBody3D"]
collision_layer = 256
collision_mask = 64
script = ExtResource("1_yit2p")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
layers = 513
mesh = SubResource("SphereMesh_okwvi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_ch331")

[node name="timer_remove_object" type="Timer" parent="."]
one_shot = true

[node name="timer_find_enemy_in_area" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="area3d_tornado_circle" type="Area3D" parent="."]
collision_layer = 256
collision_mask = 64

[node name="CollisionShape3D" type="CollisionShape3D" parent="area3d_tornado_circle"]
shape = SubResource("CylinderShape3D_pffwp")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_isfe7")

[connection signal="timeout" from="timer_remove_object" to="." method="_on_timer_remove_object_timeout"]
[connection signal="timeout" from="timer_find_enemy_in_area" to="." method="_on_timer_find_enemy_in_area_timeout"]
